Fix styling on mobile view and add back header

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@ a:hover {
   @apply text-weblink-blue-darker;
 }
 
-section:before {
+main:before {
   content: '';
   display: block;
   position: relative;
@@ -21,7 +21,7 @@ section:before {
 .embla {
   max-width: 70rem;
   margin: auto;
-  --slide-height: 19rem;
+  --slide-height: 100%;
   --slide-spacing: 1rem;
   --slide-size: 70%;
   --slide-spacing-xs: 1.2rem;
@@ -32,6 +32,12 @@ section:before {
   --slide-size-md: calc(100% / 3);
   --slide-spacing-lg: 2rem;
   --slide-size-lg: calc(100% / 3.5);
+}
+
+.embla__viewport {
+  overflow: hidden;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .embla__container {
